stylin up header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+<header>
+    <div id="logo">Developer Taylor's Blog</div>
+</header>
 <body>
     
 </body>
