created 'main' container but still doesn't solve header issue, readjusting

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <main>
     <header>
         <div id="logo">Developer Taylor's Blog</div>
     </header>
@@ -54,6 +55,7 @@
           </ul>
         </nav>
       </aside>
-      <footer>©2020 Developer Diane.</footer>
+    </main>
+    <footer>©2020 Developer Diane.</footer>
 </body>
 </html>
