--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <aside>
         <h3>About me</h3>
         <img src="ed.jpg" alt="Developer Taylor coding on her laptop.">
-        <p>Developer Taylor is a graduate of Treehouse’s Front End Web Development Techdegree. She’s currently a junior developer at Super Web Design Shop.</p>
+        <p id="bio">Developer Taylor is a graduate of Treehouse’s Front End Web Development Techdegree. He’s currently a junior developer at Super Web Design Shop.</p>
         <h3>Other articles I’ve written</h3>
         <nav>
           <ul>
