fig and figcaption

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
       </article>
       <aside>
         <h3>About me</h3>
-        <img src="ed.jpg" alt="Developer Taylor coding on her laptop.">
+        <figure>
+            <img src="ed.jpg" alt="Developer Taylor coding on his laptop.">
+            <figcaption>"Developer Taylor coding on his laptop."</figcaption>
+        </figure>
         <p id="bio">Developer Taylor is a graduate of Treehouse’s Front End Web Development Techdegree. He’s currently a junior developer at Super Web Design Shop.</p>
         <h3>Other articles I’ve written</h3>
         <nav>
