adder banner to style with id

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <p>Beginning developers may have some trouble keeping the other parts of the box model straight, so let’s examine them one by one.</p>
         </section>
         <section>
+            <div id="interesting-banner">Look!! I'm a CSS Wizard now!!!</div>
           <h2>Padding</h2>
           <p>Padding immediately surrounds the content area. Padding is often used to give the content area some breathing room by separating the content from the surrounding border area.</p>
         </section>
