--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p>Beginning developers may have some trouble keeping the other parts of the box model straight, so let’s examine them one by one.</p>
         </section>
         <div id="interesting-banner">Look!! I'm a CSS Wizard now!!!</div>
-        <section id="ed-pic-test">
+        <section id="spike-pic-test">
           <h2>Padding</h2>
           <p>Padding immediately surrounds the content area. Padding is often used to give the content area some breathing room by separating the content from the surrounding border area.</p>
         </section>
